[VISUAL] navbar spacing fix; updated body/html background

--- a/src/app/nav/navbar/navbar.component.sass
+++ b/src/app/nav/navbar/navbar.component.sass
@@ -26,12 +26,16 @@ mat-toolbar
   justify-content: center
 
   & > *
-    min-width: 64px
-    max-width: 64px
+    min-width: 56px
+    max-width: 56px
 
   .home-page-indicator
     max-width: 128px
     min-width: 128px
+
+  .mobile-hide
+    max-width: 32px
+    min-width: 32px
 
 .home-page-indicator
   cursor: pointer
