--- a/src/app/pages/contact/contact.component.sass
+++ b/src/app/pages/contact/contact.component.sass
@@ -20,7 +20,7 @@
   max-width: 400px
   min-width: 400px
   margin: 16px
-  @media only screen and (max-width: 500px)
+  @media only screen and (max-width: 600px)
     max-width: 300px
     min-width: 300px
     margin: 8px
