--- a/src/styles.sass
+++ b/src/styles.sass
@@ -6,9 +6,12 @@ $primary: #7B1FA2
 $accent: #69F0AE
 $warn: #F44336
 
+$background: #303030
+
 $gray-1: #2a2a2a
 $gray-2: #0d0d0d
 $gray-3: #3d3d3d
+
 
 
 /* ---------------------------------------------------------------------
@@ -16,6 +19,9 @@ $gray-3: #3d3d3d
    */
 
 body, html
+  background: $background
+  overflow-x: hide
+  overflow-y: hide
   margin: 0
   padding: 0
   height: 100%
